Fix grid items overflowing grid container

--- a/style.css
+++ b/style.css
@@ -20,16 +20,17 @@ body {
 }
 
 .container {
+  align-content: start;
+  border: 1px solid var(--main-color);
   background: var(--container-color);
   display: grid;
   grid-template: 1fr 8fr / 1fr 4fr;
   color: var(--main-color);
   border-radius: 40px;
+  min-height: calc(100vh - 16px);
   padding: 15px 25px;
   gap: 25px;
-  height: calc(100vh - 16px);
-  align-content: start;
-  border: 1px solid var(--main-color);
+  /* height: calc(100vh - 16px); */
 }
 
 .container>header {
@@ -76,8 +77,8 @@ aside {
 }
 
 .side-content {
-  display: flex;
   align-items: center;
+  display: flex;
   gap: 30px;
 }
 
@@ -158,8 +159,11 @@ main>section header {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
-article {
+.projects article {
   background-color: #f43f5e;
+  border-radius: 5px;
+  box-shadow: 1px 2px 4px black;
+  padding: 20px;
 }
 
 img {
@@ -171,4 +175,9 @@ img {
 
 h2 {
   margin-top: 0;
+}
+
+.github-image {
+  height: 40px;
+  width: 40px;
 }
